fix dark mode

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -3,9 +3,9 @@
 @tailwind utilities;
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap");
 :root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+  --foreground-rgb: 94, 234, 212;
+  --background-start-rgb: 17, 24, 39;
+  --background-end-rgb: 49, 46, 129;
 }
 
 /* slate 900 */
